specs/001-typescript-to-zig-native/examples/valid/postfix-and-compound.ts
let total = 0;

for (let i = 0; i < 5; i++) {
  total += i;
}

total -= 1;

console.log(total);
