specs/001-typescript-to-zig-native/examples/invalid/while-condition-type.ts
while (1) {
  console.log("bad");
}
